# curl-quests

./: .gitignore  Cargo.toml  LICENSE  README.md  correct_payslip.json  payslip.json
data/: app.db  quest.db
quests/01-Get/: quest.toml  server.sh
quests/01-your-first-request/: server.sh
quests/02-Post/: quest.toml  server.sh
quests/03-Headers/: quest.toml  server.sh
quests/03-Put-Patch-Delete/: quest.toml
quests/04-Header-Inspection/: quest.toml
quests/04-Query & Encoding/: quest.toml  server.sh
quests/05-File-Upload/: quest.toml  server.sh
quests/05-Status-Codes/: quest.toml  server.sh
quests/06-Auth-JWT/: quest.toml  server.sh
quests/06-Headers/: quest.toml
quests/06-Query & Encoding/: quest.toml  server.sh
quests/07-Header-Inspection/: quest.toml  server.sh
quests/07-Put-Patch-Delete/: quest.toml  server.sh
quests/08-File-Upload/: quest.toml
quests/08-Status-Codes/: quest.toml
quests/09-Auth-JWT/: quest.toml
quests/09-Redirects/: quest.toml  server.sh
quests/10-Auth-JWT/: quest.toml  server.sh
quests/10-Redirects/: server.sh
quests/11-Chaining/: quest.toml  server.sh
quests/11-JQ/: quest.toml  server.sh
quests/data/: app.db
src/: app.rs  db.rs  main.rs
src/quests/: mod.rs
src/ui/: levels.rs  mod.rs  quest_view.rs  sidebar.rs
